# tx5

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  android-build-tests.bash  android-run-tests.bash  deadlock.md  flake.nix  gpt-deadlock.md  rust-toolchain.toml
.github/workflows/: android.yml  publish-release.yml  stale.yml  static.yml  test.yml
crates/asv/: Cargo.toml  README.md
crates/asv/src/: lib.rs
crates/tx4/: Cargo.toml  README.md
crates/tx4-core/: Cargo.toml  README.md
crates/tx4-core/src/: error.rs  id.rs  lib.rs  url.rs  wire.rs
crates/tx4-demo/: Cargo.toml  README.md
crates/tx4-demo/src/: con_.rs  config.rs  core.rs  lair.rs  main.rs  sig.rs  state.rs
crates/tx4-go-pion/: Cargo.toml  README.md
crates/tx4-go-pion-sys/: Cargo.toml  README.md  buffer.go  build.rs  const.go  datachannel.go  go.mod  go.sum  main.go  peerconnection.go
crates/tx4-go-pion-sys/src/: constants.rs  lib.rs
crates/tx4-go-pion/src/: data_chan.rs  evt.rs  go_buf.rs  lib.rs  peer_con.rs
crates/tx4-signal/: Cargo.toml  README.md
crates/tx4-signal-cli/: Cargo.toml  README.md
crates/tx4-signal-cli/src/: lib.rs
crates/tx4-signal-core/: Cargo.toml  README.md
crates/tx4-signal-core/src/: cli.rs  lib.rs  srv.rs  tls.rs  util.rs
crates/tx4-signal-core/src/docs/: srv_help.md
crates/tx4-signal-srv/: Cargo.toml  README.md
crates/tx4-signal-srv/docker/: Dockerfile  README.md
crates/tx4-signal-srv/src/: config.rs  lib.rs  main.rs  server.rs
crates/tx4-signal-srv/src/docs/: srv_help.md
crates/tx4-signal/src/: cli.rs  lib.rs  srv.rs  tests.rs  tls.rs  util.rs  wire.rs
crates/tx4/src/: actor.rs  buf.rs  chan.rs  config.rs  conn.rs  endpoint.rs  lib.rs  state.rs
crates/tx4/src/buf/imp/: imp_go_pion.rs
crates/tx4/src/chan/imp/: imp_go_pion.rs
crates/tx4/src/conn/imp/: imp_go_pion.rs
crates/tx4/src/state/: conn.rs  data.rs  drop_consider.rs  sig.rs  sig_state.rs  state.rs  state_data.rs  state_test.rs  store.rs  test.rs
crates/tx5/: Cargo.toml  README.md
crates/tx5-connection/: Cargo.toml  README.md
crates/tx5-connection/src/: config.rs  conn.rs  framed.rs  hub.rs  lib.rs  proto.rs  test.rs  webrtc.rs
crates/tx5-connection/src/webrtc/: go_pion.rs  libdatachannel.rs
crates/tx5-core/: Cargo.toml  README.md  build.rs
crates/tx5-core/src/: README.tpl  error.rs  evt.rs  file_check.rs  id.rs  lib.rs  pipe_ipc.rs  uniq.rs  url.rs  wire.rs
crates/tx5-demo/: Cargo.toml  README.md
crates/tx5-demo/src/: main.rs
crates/tx5-discover/: Cargo.toml  README.md
crates/tx5-discover/examples/: announce.rs
crates/tx5-discover/src/: lib.rs  shotgun.rs  socket.rs  test.rs
crates/tx5-go-pion/: Cargo.toml  README.md
crates/tx5-go-pion-sys/: Cargo.toml  README.md  buffer.go  build.rs  const.go  datachannel.go  go.mod  go.sum  main.go  peerconnection.go
crates/tx5-go-pion-sys/src/: lib.rs
crates/tx5-go-pion-turn/: Cargo.toml  README.md  build.rs  go.mod  go.sum  main.go  update-vendor.bash
crates/tx5-go-pion-turn/src/: lib.rs
crates/tx5-go-pion/examples/: stun-check.rs  turn-stress.rs
crates/tx5-go-pion/src/: data_chan.rs  evt.rs  go_buf.rs  lib.rs  peer_con.rs
crates/tx5-go-pion/tests/: limit-ports.rs
crates/tx5-online/: Cargo.toml  README.md
crates/tx5-online/src/: lib.rs
crates/tx5-pipe/: Cargo.toml  README.md
crates/tx5-pipe-control/: Cargo.toml  README.md
crates/tx5-pipe-control/src/: lib.rs
crates/tx5-pipe/examples/textboard/: main.rs  state.rs
crates/tx5-pipe/src/: boot.rs  client.rs  lib.rs  server.rs
crates/tx5-pipe/src/server/: boot.rs
crates/tx5-pipe/tests/: exec-binary.rs
crates/tx5-signal/: Cargo.toml  README.md
crates/tx5-signal-srv/: Cargo.toml  README.md
crates/tx5-signal-srv/docker/: Dockerfile  README.md
crates/tx5-signal-srv/src/: config.rs  lib.rs  server.rs
crates/tx5-signal-srv/src/docs/: srv_help.md
crates/tx5-signal/examples/: connect.rs
crates/tx5-signal/src/: cli.rs  conn.rs  lib.rs  tests.rs  tls.rs  wire.rs
crates/tx5/benches/: throughput.rs
crates/tx5/examples/: mem-echo-stress.rs  sig_idle.rs  turn_doctor.rs
crates/tx5/src/: actor.rs  back_buf.rs  backend.rs  buf.rs  config.rs  endpoint.rs  ep.rs  ep2.rs  ep3.rs  lib.rs  peer.rs  proto.rs  sig.rs  state.rs  state2.rs  stats.rs  test.rs  test_behavior.rs  url.rs
crates/tx5/src/back_buf/imp/: imp_go_pion.rs  imp_webrtc_rs.rs
crates/tx5/src/backend/: be_tx5_connection.rs  go_pion.rs  mem.rs
crates/tx5/src/buf/imp/: imp_go_pion.rs
crates/tx5/src/ep3/: peer.rs  sig.rs  test.rs
crates/tx5/src/peer/: maybe_ready.rs
crates/tx5/src/state/: conn.rs  drop_consider.rs  sig.rs  test.rs
crates/tx5/src/state2/: peer.rs  sig.rs
crates/tx5/tests/tests/: events.rs  flaky_sig.rs  investigate.rs  mod.rs  multi_sig.rs  reconnect.rs  relay_over_sig.rs  stress.rs
tx5-signal-cf/: .prettierrc  package-lock.json  package.json  tsconfig.json  wrangler.toml
tx5-signal-cf/src/: b64.ts  ed.ts  err.ts  index.test.ts  index.ts  msg.test.ts  msg.ts  rate-limit.test.ts  rate-limit.ts
