[workspace]
members = [
  "crates/tx5",
  "crates/tx5-core",
  "crates/tx5-connection",
  "crates/tx5-online",
  "crates/tx5-go-pion-sys",
  "crates/tx5-go-pion",
  "crates/tx5-signal",
  "crates/tx5-demo",
  "crates/tx5-go-pion-turn",
]
resolver = "2"

[workspace.dependencies]
app_dirs2 = "2.5.5"
backtrace = "0.3.69"
base64 = "0.22.1"
better-panic = "0.3.0"
bit_field = "0.10.2"
bytes = "1.4.0"
clap = { version = "4.4.6", features = [ "derive", "wrap_help" ] }
criterion = { version = "0.5.1", features = [ "async_tokio" ] }
dirs = "5.0.0"
dunce = "1.0.3"
futures = "0.3.28"
if-addrs = "0.10.1"
Inflector = "0.11.4"
influxive-otel-atomic-obs = "=0.0.2-alpha.1"
influxive-child-svc = "=0.0.2-alpha.1"
influxive = "=0.0.2-alpha.1"
lair_keystore_api = "=0.4.4"
libc = "0.2.141"
libloading = "0.8.0"
once_cell = "1.17.1"
openssl-sys = { version = "0.9.90", features = [ "vendored" ] }
opentelemetry_api = { version = "=0.20.0", features = [ "metrics" ] }
ouroboros = "0.15.6"
parking_lot = "0.12.1"
prometheus = "0.13.3"
rand = "0.8.5"
rand-utf8 = "0.0.1"
rcgen = { version = "0.10.0", features = [ "pem" ] }
ring = "0.16.20"
rustls = { version = "0.20.0", features = [ "dangerous_configuration" ] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.2"
sbd-e2e-crypto-client = "0.0.4-alpha"
sbd-server = "0.0.4-alpha"
serde = { version = "1.0.160", features = [ "derive", "rc" ] }
serde_json = { version = "1.0.96", features = [ "preserve_order" ] }
sha2 = "0.10.6"
socket2 = { version = "0.5.2", features = [ "all" ] }
sodoken = "=0.0.901-alpha"
tempfile = "3.8.0"
tokio = { version = "1.35.1" }
tokio-rustls = "0.23.4"
tokio-tungstenite = { version = "0.18.0", features = [ "rustls-tls-native-roots" ] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
trust-dns-resolver = "0.22.0"
tx5-connection = { version = "0.0.11-alpha", default-features = false, path = "crates/tx5-connection" }
tx5-core = { version = "0.0.11-alpha", default-features = false, path = "crates/tx5-core" }
tx5-go-pion-turn = { version = "0.0.11-alpha", path = "crates/tx5-go-pion-turn" }
tx5-go-pion-sys = { version = "0.0.11-alpha", path = "crates/tx5-go-pion-sys" }
tx5-go-pion = { version = "0.0.11-alpha", path = "crates/tx5-go-pion" }
tx5-signal = { version = "0.0.11-alpha", path = "crates/tx5-signal" }
tx5 = { version = "0.0.11-alpha", path = "crates/tx5" }
url = { version = "2.3.1", features = [ "serde" ] }
warp = { version = "0.3.4", features = [ "websocket" ] }
webpki-roots = { version = "0.23.0" }
webrtc = { version = "0.10.1" }
zip = { version = "0.6.4", default-features = false, features = [ "deflate" ] }

#[patch.crates-io]
#sbd-e2e-crypto-client = { path = "../sbd/rust/sbd-e2e-crypto-client" }
#sbd-server = { path = "../sbd/rust/sbd-server" }
