[workspace]
members = [
  "crates/tx5",
  "crates/tx5-core",
  "crates/tx5-connection",
  "crates/tx5-online",
  "crates/tx5-go-pion-sys",
  "crates/tx5-go-pion",
  "crates/tx5-signal",
  "crates/tx5-demo",
  "crates/tx5-go-pion-turn",
]
resolver = "2"

[workspace.dependencies]
app_dirs2 = "2.5.5"
base64 = "0.22.1"
bit_field = "0.10.2"
clap = { version = "4.4.6", features = [ "derive", "wrap_help" ] }
criterion = { version = "0.5.1", features = [ "async_tokio" ] }
datachannel = { version = "0.14.0", default-features = false, features = [ "tracing" ] }
dirs = "6.0.0"
dunce = "1.0.3"
futures = "0.3.28"
if-addrs = "0.10.1"
Inflector = "0.11.4"
influxive-otel-atomic-obs = "=0.0.4-alpha.1"
influxive = "=0.0.4-alpha.1"
libc = "0.2.141"
libloading = "0.8.0"
once_cell = "1.17.1"
ouroboros = "0.15.6"
rand = "0.8.5"
sbd-e2e-crypto-client = "0.0.11-alpha2"
sbd-server = "0.0.11-alpha2"
serde = { version = "1.0.160", features = [ "derive", "rc" ] }
serde_json = { version = "1.0.96", features = [ "preserve_order" ] }
sha2 = "0.10.6"
slab = "0.4.9"
tempfile = "3.8.0"
tokio = { version = "1.35.1" }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
trust-dns-resolver = "0.22.0"
tx5-connection = { version = "0.3.0-beta", default-features = false, path = "crates/tx5-connection" }
tx5-core = { version = "0.3.0-beta", default-features = false, path = "crates/tx5-core" }
tx5-go-pion-turn = { version = "0.3.0-beta", path = "crates/tx5-go-pion-turn" }
tx5-go-pion-sys = { version = "0.3.0-beta", path = "crates/tx5-go-pion-sys" }
tx5-go-pion = { version = "0.3.0-beta", path = "crates/tx5-go-pion" }
tx5-signal = { version = "0.3.0-beta", path = "crates/tx5-signal" }
tx5 = { version = "0.3.0-beta", path = "crates/tx5" }
url = { version = "2.3.1", features = [ "serde" ] }
zip = { version = "0.6.4", default-features = false, features = [ "deflate" ] }

#[patch.crates-io]
#sbd-e2e-crypto-client = { path = "../sbd/rust/sbd-e2e-crypto-client" }
#sbd-server = { path = "../sbd/rust/sbd-server" }
