[package]
name = "tx4-core"
version = "0.0.1"
edition = "2021"
description = "Holochain WebRTC P2P Communication Ecosystem Core Types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4-core"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = [ "std" ] }
serde = { version = "1.0.136", default-features = false, features = [ "std", "derive", "rc" ] }
