[package]
name = "tx4-core"
version = "0.0.1"
edition = "2021"
description = "Holochain WebRTC P2P Communication Ecosystem Core Types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4-core"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = "0.13.0"
serde = { version = "1.0.144", features = [ "derive", "rc" ] }
serde_json = { version = "1.0.85", features = [ "preserve_order" ] }
