[package]
name = "tx4-go-pion-sys"
version = "0.0.1"
edition = "2021"
description = "Rust bindings to the go pion webrtc library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4-go-pion-sys"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
exclude = [
  # unzipped the vendor dir is > 10mb so we wouldn't be able to upload
  # to crates.io, hence the need for the zip file
  "vendor/",
]

[dependencies]
libc = "0.2.126"
libloading = "0.7.3"
once_cell = "1.13.0"
ouroboros = "0.15.0"
tempfile = "3.3.0"

[dev-dependencies]
parking_lot = "0.12.1"

[build-dependencies]
zip = { version = "0.6.2", default-features = false, features = [ "deflate" ] }
