[package]
name = "tx4-go-pion"
version = "0.0.1"
edition = "2021"
description = "Rust bindings to the go pion webrtc library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4-go-pion"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
tx4-go-pion-sys = { version = "0.0.1", path = "../tx4-go-pion-sys" }
parking_lot = "0.12.1"
url = { version = "2.2.2", features = [ "serde" ] }
tracing = "0.1.36"

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
