[package]
name = "tx4-signal-srv"
version = "0.0.1"
description = "holochain webrtc signal server"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4-signal-core"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = [ "std" ] }
clap = { version = "3.2.11", default-features = false, features = [ "std", "derive", "wrap_help" ] }
dirs = { version = "4.0.0", default-features = false }
futures = { version = "0.3.21", default-features = false, features = [ "std" ] }
get_if_addrs = { version = "0.5.3", default-features = false }
rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
serde = { version = "1.0.136", default-features = false, features = [ "std", "derive", "rc" ] }
serde_json = { version = "1.0.82", default-features = false, features = [ "std", "preserve_order" ] }
sodoken = { version = "0.0.4", default-features = false }
tokio = { version = "1.19.2", default-features = false, features = [ "full" ] }
tracing = { version = "0.1.34", default-features = false }
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
tx4-signal = { version = "0.0.1", path = "../tx4-signal" }
warp = { version = "0.3.2", default-features = false, features = [ "websocket" ] }
