[package]
name = "tx4-signal-srv"
version = "0.0.1"
description = "holochain webrtc signal server"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4-signal-core"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
clap = { version = "3.2.11", features = [ "derive", "wrap_help" ] }
dirs = "4.0.0"
futures = "0.3.21"
get_if_addrs = "0.5.3"
rand = "0.8.5"
sodoken = "0.0.4"
tokio = { version = "1.19.2", features = [ "full" ] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
tx4-core = { version = "0.0.1", path = "../tx4-core" }
warp = { version = "0.3.2", features = [ "websocket" ] }
