[package]
name = "tx4-signal"
version = "0.0.1"
description = "holochain webrtc signal server / client core types"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4-signal"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = [ "std" ] }
event-listener = { version = "2.5.2", default-features = false }
futures = { version = "0.3.21", default-features = false, features = [ "std" ] }
lair_keystore_api = { version = "0.2.0", default-features = false }
once_cell = { version = "1.10.0", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
rand-utf8 = { version = "0.0.1", default-features = false }
rcgen = { version = "0.9.2", default-features = false, features = [ "pem" ] }
ring = { version = "0.16.20", default-features = false }
rustls = { version = "0.20.4", default-features = false, features = [ "dangerous_configuration" ] }
serde = { version = "1.0.136", default-features = false, features = [ "std", "derive", "rc" ] }
serde_json = { version = "1.0.82", default-features = false, features = [ "std", "preserve_order" ] }
sha2 = { version = "0.10.2", default-features = false, features = [ "std" ] }
socket2 = { version = "0.4.4", default-features = false }
sodoken = { version = "0.0.4", default-features = false }
tokio = { version = "1.19.2", default-features = false, features = [ "full" ] }
tokio-rustls = { version = "0.23.3", default-features = false }
tokio-tungstenite = { version = "0.17.1", default-features = false }
tracing = { version = "0.1.34", default-features = false }
tx4-core = { version = "0.0.1", path = "../tx4-core" }
url = { version = "2.2.2", default-features = false }

[dev-dependencies]
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
