[package]
name = "tx4-signal"
version = "0.0.1"
description = "holochain webrtc signal client"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4-signal"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
futures = "0.3.21"
lair_keystore_api = "0.2.0"
once_cell = "1.10.0"
rand-utf8 = "0.0.1"
rcgen = { version = "0.9.3", features = [ "pem" ] }
ring = "0.16.20"
rustls = { version = "0.20.4", features = [ "dangerous_configuration" ] }
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.0"
sha2 = "0.10.2"
socket2 = "0.4.4"
tokio = { version = "1.19.2", features = [ "full" ] }
tokio-rustls = "0.23.3"
tokio-tungstenite = { version = "0.17.1", features = [ "rustls-tls-native-roots" ] }
tracing = "0.1.34"
tx4-core = { version = "0.0.1", path = "../tx4-core" }
url = "2.2.2"

[dev-dependencies]
rand = "0.8.5"
sodoken = "0.0.4"
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
tx4-signal-srv = { version = "0.0.1", path = "../tx4-signal-srv" }
