[package]
name = "tx4"
version = "0.0.1"
edition = "2021"
description = "The main holochain tx4 webrtc networking crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx4"
documentation = "https://docs.rs/tx4"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[features]
default = [ "backend-go-pion" ]

# use the tx4-go-pion crate as the webrtc backend
backend-go-pion = [ "tx4-go-pion" ]

# use the webrtc-rs crate as the webrtc backend
backend-webrtc-rs = [ "webrtc" ]

[dependencies]
futures = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
rand-utf8 = { workspace = true }
tokio = { workspace = true, features = [ "rt", "sync" ] }
tracing = { workspace = true }
tx4-core = { workspace = true }
tx4-go-pion = { workspace = true, optional = true }
tx4-signal = { workspace = true }
url = { workspace = true }
webrtc = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = [ "macros", "rt", "rt-multi-thread", "sync" ] }
tracing-subscriber = { workspace = true }
tx4-signal-srv = { workspace = true }
rand = { workspace = true }
rand-utf8 = { workspace = true }
