[package]
name = "tx5-connection"
version = "0.0.9-alpha"
description = "holochain webrtc connection"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-connection"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
bit_field = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing = { workspace = true }
tx5-core = { workspace = true }
tx5-signal = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
sbd-server = { workspace = true }
tracing-subscriber = { workspace = true }
