[package]
name = "tx5-connection"
version = "0.3.1-beta"
description = "holochain webrtc connection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-connection"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
edition = "2021"

[features]
default = [ "backend-libdatachannel", "datachannel-vendored" ]

# use the libdatachannel crate as the webrtc backend
backend-libdatachannel = [ "dep:datachannel" ]

datachannel-vendored = [ "datachannel/vendored" ]

# use the tx5-go-pion crate as the webrtc backend
backend-go-pion = [ "dep:tx5-go-pion" ]

# use the webrtc-rs crate as the webrtc backend
backend-webrtc-rs = [ ]

[dependencies]
bit_field = { workspace = true }
datachannel = { workspace = true, optional = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing = { workspace = true }
tx5-core = { workspace = true }
tx5-signal = { workspace = true }
tx5-go-pion = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
sbd-server = { workspace = true }
tracing-subscriber = { workspace = true }
