[package]
name = "tx5-core"
version = "0.0.1-alpha.3"
edition = "2021"
description = "Holochain WebRTC P2P Communication Ecosystem Core Types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-core"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
