[package]
name = "tx5-core"
version = "0.0.2-alpha"
edition = "2021"
description = "Holochain WebRTC P2P Communication Ecosystem Core Types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-core"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# file_check deps
dirs = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# pipe_ipc deps
tokio = { workspace = true, optional = true, features = [ "io-util" ] }

[dev-dependencies]
tokio = { workspace = true, features = [ "full" ] }

[features]
default = [ "file_check", "pipe_ipc" ]

# A couple crates that depend on tx5-core need to be able to write/verify
# files on system. Enable this `file_check` feature to provide that ability.
file_check = [ "dirs", "sha2", "tempfile" ]

# If you want to be able to parse the tx5-pipe ipc protocol
# enable this `pipe_ipc` feature.
pipe_ipc = [ "tokio" ]
