[package]
name = "tx5-core"
version = "0.3.0-beta"
edition = "2021"
description = "Holochain WebRTC P2P Communication Ecosystem Core Types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-core"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [ "sync" ] }
tracing = { workspace = true }
url = { workspace = true }

# file_check deps
app_dirs2 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = [ "full" ] }

[features]
default = [ "file_check" ]

# A couple crates that depend on tx5-core need to be able to write/verify
# files on system. Enable this `file_check` feature to provide that ability.
file_check = [ "app_dirs2", "sha2", "tempfile" ]
