[package]
name = "tx5-demo"
version = "0.0.1-alpha.1"
edition = "2021"

[dependencies]
clap = { workspace = true }
crossterm = { version = "0.25.0" }
parking_lot = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tx5 = { workspace = true }
