[package]
name = "tx5-demo"
version = "0.0.1-alpha.18"
edition = "2021"
description = "Demo crate showing off Tx5 WebRTC functionality"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-demo"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
influxive = { workspace = true }
opentelemetry_api = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tx5 = { workspace = true }
