[package]
name = "tx5-discover"
version = "0.0.1-alpha.1"
edition = "2021"
description = "Holochain WebRTC P2P Communication Ecosystem LAN Discovery"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-discover"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = { workspace = true }
flate2 = { workspace = true }
if-addrs = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
socket2 = { workspace = true }
sodoken = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing = { workspace = true }
tx5-core = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
