[package]
name = "tx5-go-pion-sys"
version = "0.0.1-alpha.3"
edition = "2021"
description = "Low level rust bindings to the go pion webrtc library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-go-pion-sys"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
exclude = [
  # unzipped the vendor dir is > 10mb so we wouldn't be able to upload
  # to crates.io, hence the need for the zip file
  "vendor/",
]

[dependencies]
libc = { workspace = true }
libloading = { workspace = true }
once_cell = { workspace = true }
ouroboros = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tx5-core = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }

[build-dependencies]
Inflector = { workspace = true }
zip = { workspace = true }
