[package]
name = "tx5-go-pion-sys"
version = "0.0.11-alpha"
edition = "2021"
description = "Low level rust bindings to the go pion webrtc library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-go-pion-sys"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]
exclude = [
  # unzipped the vendor dir is > 10mb so we wouldn't be able to upload
  # to crates.io, hence the need for the zip file
  "vendor/",
]
links = "go-pion-webrtc"

[dependencies]
base64 = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true }
once_cell = { workspace = true }
ouroboros = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tx5-core = { workspace = true, features = [ "file_check" ] }

[dev-dependencies]
parking_lot = { workspace = true }

[build-dependencies]
base64 = { workspace = true }
Inflector = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }

[features]
# only one of force_dynamic_link or force_static_link may be active at a time
# forces the code to run through the dynamic linking process
# even if that may not be supported by the target platform
force_dynamic_link = []

# only one of force_dynamic_link or force_static_link may be active at a time
# forces the code to run through the static linking process
# even if that may not be supported by the target platform
force_static_link = []
