[package]
name = "tx5-go-pion"
version = "0.2.0-beta"
edition = "2021"
description = "Rust bindings to the go pion webrtc library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-go-pion"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
futures = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tx5-go-pion-sys = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tx5-core = { workspace = true }
tracing-subscriber = { workspace = true }
tx5-go-pion-turn = { workspace = true }
