[package]
name = "tx5-online"
version = "0.0.7-alpha"
edition = "2021"
description = "Holochain WebRTC P2P Communication Ecosystem Online Connectivity Events"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-online"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
once_cell = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
trust-dns-resolver = { workspace = true }
tx5-core = { workspace = true }
