[package]
name = "tx5-pipe"
version = "0.0.2-alpha"
edition = "2021"
description = "Holochain WebRTC P2P CLI Tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-pipe"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = { workspace = true }
blake2b_simd = { workspace = true }
bytes = { workspace = true }
lair_keystore_api = { workspace = true }
msgpackin_core = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
sodoken = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tx5-core = { workspace = true, features = [ "pipe_ipc" ] }
tx5 = { workspace = true, features = [ "pipe_ipc" ] }
