[package]
name = "tx5-pipe"
version = "0.0.2-alpha"
edition = "2021"
description = "The dirt simple way to include tx5 webrtc p2p networking in your project - pipe your messages to a child process"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/tx5"
documentation = "https://docs.rs/tx5-pipe"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["holochain", "holo", "p2p", "webrtc", "networking"]
categories = ["network-programming"]

[dependencies]
asv = { workspace = true }
base64 = { workspace = true }
blake2b_simd = { workspace = true }
bytes = { workspace = true }
lair_keystore_api = { workspace = true }
msgpackin = { workspace = true, features = [ "std", "serde" ] }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sodoken = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing = { workspace = true }
tx5-core = { workspace = true, features = [ "pipe_ipc" ] }
tx5 = { workspace = true, features = [ "pipe_ipc" ] }
tx5-pipe-control = { workspace = true }

[dev-dependencies]
crossterm = "0.27.0"
escargot = "0.5.8"
kitsune_p2p_bootstrap = { workspace = true }
tracing-subscriber = { workspace = true }
tx5-signal-srv = { workspace = true }
